# MikGPT

./: .gitattributes  .gitignore  build_error.txt  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mikgpt-jni.cpp
app/src/main/java/com/mikgpt/: ArtifactWebView.kt  LlamaInference.kt  MainActivity.kt  SearchTool.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
